# Super_Voice

./: README.md
Backend/FileRelay.server/: CMakeLists.txt  README.md
Backend/FileRelay.server/Client/src/: compressor.hpp  sender.hpp
Backend/FileRelay.server/Server/src/: control.hpp
Backend/FileRelay.server/common/: bytes.hpp  socket_utils.hpp
Backend/FileRelay.server/scripts/: e2e.sh  run_client.bat  run_client.sh  run_server.bat  run_server.sh
Backend/FileRelay.server/tests/integration/: roundtrip_large.md  roundtrip_medium.md  roundtrip_small.md
Backend/FileRelay_.server/: Dockerfile
Backend/FileRelay_.server/Client/src/: chunker.hpp  system_channels.hpp
Backend/FileRelay_.server/Server/src/: assembler.hpp  listeners.hpp  main.cpp
Backend/FileRelay_.server/common/: config.hpp  protocol.hpp
Backend/FileRelay_.server/scripts/: e2e.sh  run_client.bat
Backend/FileRelay_.server/tests/integration/: roundtrip_small.md
Backend/LocalAI_.server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Backend/LocalAI_.server/app/: __init__.py  main.py
Backend/LocalAI_.server/app/core/: config.py  settings.py
Backend/LocalAI_.server/app/routers/: __init__.py  images.py  llm.py  stt.py  tts.py  videos.py  vlm.py
Backend/LocalAI_.server/app/schemas/: __init__.py  common.py  images.py  llm.py  stt.py  tts.py  videos.py  vlm.py
Backend/LocalAI_.server/app/services/: __init__.py  images.py  llm.py  stt.py  tts.py  videos.py  vlm.py
Backend/LocalAI_.server/app/utils/: __init__.py  file_utils.py
Backend/Local_AI_Model_.server/: CMakeLists.txt  Dockerfile  README.md
Backend/Local_AI_Model_.server/Client/: CMakeLists.txt
Backend/Local_AI_Model_.server/Client/src/: compressor.hpp  main.cpp  queue.hpp  sender.hpp  system_channels.hpp  watcher.hpp
Backend/Local_AI_Model_.server/Server/: CMakeLists.txt
Backend/Local_AI_Model_.server/Server/src/: main.cpp  storage.hpp
Backend/Local_AI_Model_.server/cmake/: FindZSTD.cmake
Backend/Local_AI_Model_.server/docs/adr/: 0001-protocol-and-layout.md
Backend/Local_AI_Model_.server/docs/plan/: 00_master_plan.md  observability.md  verification.md
Backend/Local_AI_Model_.server/docs/plan/build_system/: work_breakdown.md
Backend/Local_AI_Model_.server/docs/plan/client/: work_breakdown.md
Backend/Local_AI_Model_.server/docs/plan/docker/: work_breakdown.md
Backend/Local_AI_Model_.server/docs/plan/server/: work_breakdown.md
Backend/Local_AI_Model_.server/docs/plan/tests_cron/: cron.md
Backend/Local_AI_Model_.server/scripts/: e2e.sh  run_client.bat  run_client.sh  run_server.bat  run_server.sh
Backend/Local_AI_Model_.server/tests/integration/: roundtrip_small.md
Backend/SuperAPI._server/: .clang-format  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.observability.yml  docker-compose.yml
Backend/SuperAPI._server/config/: logging.yaml  otel.yaml  providers.yaml  server.yaml
Backend/SuperAPI._server/config/observability/: otel-collector.yaml  prometheus.yaml
Backend/SuperAPI._server/include/core/: Metrics.hpp  Tracing.hpp
Backend/SuperAPI._server/include/http/: ChatWebSocket.hpp  CompanyNamespace.hpp  HttpServer.hpp  SSE.hpp  WebSocket.hpp
Backend/SuperAPI._server/include/http/companies/: AgentRouter.hpp  Anphropic.hpp  DeepSeek.hpp  Gemini.hpp  HuggingFace.hpp  LaMA.hpp  MiniMax.hpp  OpenAI.hpp  OpenRouter.hpp  Perplexety.hpp  Qwen.hpp  Vertex.hpp  XAI.hpp
Backend/SuperAPI._server/include/providers/: AgentRouterProvider.hpp  AnthropicProvider.hpp  DeepSeekProvider.hpp  GeminiProvider.hpp  HttpProviderBase.hpp  HuggingFaceProvider.hpp  IProvider.hpp  LamaProvider.hpp  MiniMaxProvider.hpp  OpenAIProvider.hpp  OpenRouterProvider.hpp  PerplexityProvider.hpp  QwenProvider.hpp  VertexProvider.hpp  XAIProvider.hpp  ZhipuProvider.hpp
Backend/SuperAPI._server/include/superapi/: app_config.h  environment.h  logging.h  providers.h
Backend/SuperAPI._server/include/superapi/middleware/: idempotency.h  request_id.h
Backend/SuperAPI._server/openapi/: superapi.openapi.yaml
Backend/SuperAPI._server/openapi/companies/: agentrouter.yaml  anphropic.yaml  deepseek.yaml  gemini.yaml  huggingface.yaml  lama.yaml  minimax.yaml  openai.yaml  openrouter.yaml  perplexety.yaml  qwen.yaml  vertex.yaml  xai.yaml
Backend/SuperAPI._server/openapi/schemas/: asr_request.json  chat_request.json  chat_response.json  embeddings_request.json  embeddings_response.json  error.json  image_request.json  message.json  tool.json  tts_request.json
Backend/SuperAPI._server/src/: app_config.cpp  environment.cpp  logging.cpp  main.cpp  providers.cpp
Backend/SuperAPI._server/src/core/: Metrics.cpp  Tracing.cpp
Backend/SuperAPI._server/src/http/: ChatWebSocket.cpp  CompanyNamespace.cpp  HttpServer.cpp  SSE.cpp  WebSocket.cpp
Backend/SuperAPI._server/src/http/companies/: AgentRouter.cpp  Anphropic.cpp  DeepSeek.cpp  Gemini.cpp  HuggingFace.cpp  LaMA.cpp  MiniMax.cpp  OpenAI.cpp  OpenRouter.cpp  Perplexety.cpp  Qwen.cpp  Vertex.cpp  XAI.cpp
Backend/SuperAPI._server/src/middleware/: idempotency.cpp  request_id.cpp
Backend/SuperAPI._server/src/providers/: AgentRouterProvider.cpp  AnthropicProvider.cpp  DeepSeekProvider.cpp  GeminiProvider.cpp  HttpProviderBase.cpp  HuggingFaceProvider.cpp  LamaProvider.cpp  MiniMaxProvider.cpp  OpenAIProvider.cpp  OpenRouterProvider.cpp  PerplexityProvider.cpp  QwenProvider.cpp  VertexProvider.cpp  XAIProvider.cpp  ZhipuProvider.cpp
Backend/SuperAPI._server/tests/: CMakeLists.txt  environment_test.cpp
Backend/SuperAPI._server/tests/providers/: http_provider_base_test.cpp
Info_For_Codex/: agent.mg
LocalAI_.server/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
LocalAI_.server/app/: __init__.py  main.py
LocalAI_.server/app/core/: __init__.py  settings.py
LocalAI_.server/app/routers/: __init__.py
LocalAI_.server/app/schemas/: __init__.py  common.py
LocalAI_.server/app/services/: __init__.py
docs/adr/: 0001-protocol-and-layout.md
docs/plan/: 00_master_plan.md
(+4 files in other folders)
