[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localai-server"
version = "0.1.0"
description = "FastAPI skeleton for the LocalAI multimodal inference API"
readme = "README.md"
authors = [{ name = "Super Voice Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "httpx",
    "python-dotenv",
]

[project.urls]
Homepage = "https://example.com"
